--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -190,3 +190,13 @@ h6 {
 #instagram{
   background-color:#CCCCCC;
 }
+
+.img-circle {
+    border-radius: 50%;
+    padding:0px;
+}
+
+.navbar-default .navbar-nav>li {
+  margin-right:10px;
+  padding:0px;
+}
